--- a/index.html
+++ b/index.html
@@ -36,9 +36,22 @@
                     </ul>
 
                 </div>
+
             </div>
+
         </nav>
+
     </header>
+    <div class="bg-light">
+        <hr class="p-0 m-0 container mx-auto">
+    </div>
+
+    <main class="bg-light">
+
+        <div id="all-category" class="d-lg-flex justify-content-between container  p-3">
+
+        </div>
+    </main>
 
 
 
