--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- header section -->
     <header>
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg bg-light">
@@ -46,11 +47,18 @@
         <hr class="p-0 m-0 container mx-auto">
     </div>
 
+    <!-- main section -->
     <main class="bg-light">
-
+        <!-- set Category Name -->
         <div id="all-category" class="d-lg-flex justify-content-between container  p-3">
 
         </div>
+
+        <!-- load Category News -->
+        <div id="news-container" class="row row-cols-1 row-cols-md-3 g-4 pt-2">
+
+        </div>
+
     </main>
 
 
