--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- load Category News -->
-        <div id="news-container" class="row row-cols-1 row-cols-md-3 g-4 pt-2">
+        <div id="news-container" class=" container mx-auto g-3 py-4 row row-cols-1 row-cols-md-3">
 
         </div>
 
