found news item

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
         <div id="all-category" class="d-lg-flex justify-content-between container  p-3">
 
         </div>
+        <!-- found News -->
+        <div id="found-news" class="container mx-auto my-4 p-2 bg-white border border-2">
+            <h5 class="ms-2">No News found </h5>
+        </div>
 
         <!-- load Category News -->
-        <div id="news-container" class=" container mx-auto g-3 py-4 row row-cols-1 row-cols-md-3">
+        <div id="news-container" class="container mx-auto g-3 py-4 row row-cols-1 row-cols-md-3">
 
         </div>
 
