--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
         <div id="news-container" class="container mx-auto g-3 py-4 row row-cols-1 row-cols-md-3">
 
         </div>
+        <section id="spinner" class="d-none">
+            <div style="height: 350px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border text-primary" role="status">
+                </div>
+            </div>
+        </section>
 
     </main>
 
