--- a/index.html
+++ b/index.html
@@ -62,9 +62,30 @@
         <div id="news-container" class="container mx-auto g-3 py-4 row row-cols-1 row-cols-md-3">
 
         </div>
+        <!-- spinner -->
         <section id="spinner" class="d-none">
             <div style="height: 350px;" class="d-flex justify-content-center align-items-center">
                 <div class="spinner-border text-primary" role="status">
+                </div>
+            </div>
+        </section>
+        <!-- modal -->
+        <section>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="newsDetailsLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="newsDetailsLabel"></h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div id="news-details" class="modal-body">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
