--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
 
     </main>
 
+    <footer class="bg-light text-center p-2">
+        <hr>
+        <h2 class="footer-title text-muted pt-2">News Today</h2>
+        <p class="footer-detail text-secondary pb-2">Copyright 2022 News Today</p>
+    </footer>
 
 
     <script src="js/news.js"></script>
