--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
         <div id="found-news" class="container mx-auto my-4 p-2 bg-white border border-2">
             <h5 class="ms-2">No News found </h5>
         </div>
+        <div class="d-flex container mx-auto">
+            <div>
+                <span>Sort By :</span><input class="w-25 ms-2" type="text" value="default">
+            </div>
+            <div class="mx-auto me-0">
+                <button type="button" class="btn btn-primary" disabled>Today's Pick</button>
+                <button type="button" class="btn btn-outline-primary" disabled>Treding</button>
+            </div>
+        </div>
 
         <!-- load Category News -->
         <div id="news-container" class="container mx-auto g-3 py-4 row row-cols-1 row-cols-md-3">
