--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-0 mx-auto fw-semibold">
                         <li class="nav-item">
-                            <a class="nav-link  me-2" aria-current="page" href="index.html">News</a>
+                            <a class="nav-link  me-2" aria-current="page" href="#">News</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="blog.html">Blog</a>
@@ -59,7 +59,7 @@
         </div>
         <div class="d-flex container mx-auto">
             <div>
-                <span>Sort By :</span><input class="w-25 ms-2" type="text" value="default">
+                <span>Sort By :</span><input class="w-25 ms-2" type="text" value="View">
             </div>
             <div class="mx-auto me-0">
                 <button type="button" class="btn btn-primary" disabled>Today's Pick</button>
