--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/73c769621a.js" crossorigin="anonymous"></script>
 </head>
 
+
+
 <body>
 
     <header>
@@ -44,6 +46,11 @@
 
     </header>
 
+
+
+    <div class="bg-light">
+        <hr class="p-0 m-0 container mx-auto">
+    </div>
 
     <section class="container mt-5 mb-5">
         <div class="accordion" id="accordionExample">
@@ -152,7 +159,7 @@
     <footer class="bg-light text-center p-2" style="margin-top:42vh;">
         <hr>
         <h2 class="footer-title text-muted pt-2">News Today</h2>
-        <p class="footer-detail text-secondary pb-2">Copyright 2022 News Today</p>
+        <p class="footer-detail text-secondary pb-2">Copyright @ 2022 News Today</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
